<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="25dp"
        android:src="@drawable/common_signin_btn_icon_dark" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mapButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/title_app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="240dp"
        android:layout_height="76dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/button_map"
        android:textSize="30sp" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="240dp"
        android:layout_height="76dp"
        android:layout_above="@+id/imageView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="20dp"
        android:text="@string/button_logout"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="240dp"
        android:layout_height="76dp"
        android:layout_alignLeft="@+id/logoutButton"
        android:layout_centerVertical="true"
        android:text="@string/button_logout"
        android:textSize="30sp" />

</RelativeLayout>
